--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 	<title>Task 1</title>
-	<link rel="stylesheet" href="task1.css">
+	<link rel="stylesheet" href="index.css">
   </head>
   <body>
 	<table border="2px " width="700px" height="400px" style="border-collapse:collapse">
@@ -47,3 +47,4 @@
 	</table>
   </body
 </html>
+
